--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,26 @@
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
 *.ear
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# IDE Files #
+*.idea/
+*.iml
+*.classpath
+*.settings
+*.project
+*.zedstate
+*.sublime-*
+
+# Gradle Ignores #
+.gradle
+
+# Logs #
+*.logs
+*.log
+
+target/
+bin/
+test-output/
