--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
 
   <version>1.0-SNAPSHOT</version>
-  <name>twitter-service</name>
+  <name>nvivo-cg-twitter-service</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -49,7 +49,8 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>${spring.version}</version>
-    </dependency>    <dependency>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>${spring.version}</version>
